fixing building issues

--- a/blog/2025-07-06-JWT.md
+++ b/blog/2025-07-06-JWT.md
@@ -7,6 +7,6 @@ tags: [jwt]
 
 # JWT
 
-JWT 是个特别有意思的东西。结合自己的经验，写了一点[中文](./docs/reflections/Browser/JWT)的。
+JWT 是个特别有意思的东西。结合自己的经验，写了一点[中文](/docs/reflections/Browser/JWT)的。
 
 以后会多写中文的。
